hard-gists/4727690/run.log
=== Docker Run Log for 4727690 ===
Started at: Mi 29. Okt 14:58:52 CET 2025

[2025-10-29 14:58:53] START: Running container for 4727690
[2025-10-29 14:58:53] SUCCESS: Container 3830f70590d63ba0073f21ca268091c44628f7bff71679a6ce3d305071ab3491 started for 4727690
=== Container logs for 4727690 ===
  File "/snippet.py", line 26
    print response
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4727690 ===
[2025-10-29 14:58:55] INFO: Container 3830f70590d63ba0073f21ca268091c44628f7bff71679a6ce3d305071ab3491 has stopped
